test_suite/alan-2022-examples/passing/000021_random.alan
source a function W() to integer begin wEr0a[959070] := 6; leave; leave; leave end function FN() begin boolean y, E; relax end function N0() to integer begin while 8 do relax end; leave end begin integer array k; boolean k; put "" end
