test_suite/alan-2022-examples/failing/008360_mutation.alan
source t function R8q() to := boolean begin relax end begin relax end
